Served static file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ts-version": "npx tsc --version",
     "compile": "npx tsc",
-    ".": "npx ts-node src/index.ts"
+    ".": "npx ts-node src/index.ts",
+    "dev": "npx nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,12 @@
   "devDependencies": {
     "@tsconfig/node16": "^16.1.0",
     "@types/node": "^20.4.6",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.1"
   }
 }
